--- a/app/src/main/res/layout/activity_previous_meeting.xml
+++ b/app/src/main/res/layout/activity_previous_meeting.xml
@@ -36,8 +36,9 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="No Data Found"
-        android:textColor="@color/leafBrown"
+        android:textColor="@color/white"
         android:textSize="@dimen/_20sdp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
