--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<paths xmlns:android="http://schemas.android.com/apk/res/android">
 
     <external-path
         name="external"
@@ -19,4 +19,4 @@
     <external-files-path
         name="my_images"
         path="Pictures" />
-</PreferenceScreen>
+</paths>
