--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -65,7 +65,7 @@
                     android:id="@+id/tvCode"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:background="@color/gray"
+                    android:background="@color/white"
                     android:gravity="center_vertical"
                     android:paddingStart="@dimen/_10sdp"
                     android:text="+91"
@@ -76,7 +76,7 @@
                     android:id="@+id/etvPhoneNo"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@color/gray"
+                    android:background="@color/white"
                     android:hint="Phone Number"
                     android:imeOptions="actionDone"
                     android:inputType="number"
