--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -22,7 +22,7 @@
 
     <style name="edittext">
         <item name="android:background">@drawable/edittext_shape</item>
-        <item name="backgroundTint">@color/gray</item>
+        <item name="backgroundTint">@color/white</item>
         <item name="android:paddingStart">@dimen/_20sdp</item>
         <item name="android:paddingEnd">@dimen/_10sdp</item>
         <item name="android:paddingBottom">@dimen/_10sdp</item>
