--- a/app/src/main/res/layout/activity_faqactivity.xml
+++ b/app/src/main/res/layout/activity_faqactivity.xml
@@ -10,8 +10,6 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_10sdp"
-        android:paddingHorizontal="@dimen/_10sdp"
         android:paddingVertical="@dimen/_10sdp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,22 +18,24 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/_10sdp"
+            android:layout_marginVertical="@dimen/_5sdp"
             android:orientation="vertical">
 
             <LinearLayout
                 android:id="@+id/lytQ1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/leafBrown"
                 android:orientation="horizontal"
-                android:paddingHorizontal="@dimen/_5sdp"
-                android:background="@color/leafBrown">
+                android:paddingHorizontal="@dimen/_5sdp">
 
                 <TextView
                     android:id="@+id/txtQ1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="How to Create a Meeting Reservation"
+                    android:text=""
                     android:textSize="@dimen/_20ssp" />
 
                 <ImageView
@@ -51,24 +51,24 @@
                 android:id="@+id/txtA1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/_15ssp"
-                android:layout_marginTop="@dimen/_10sdp"/>
+                android:layout_marginTop="@dimen/_10sdp"
+                android:textSize="@dimen/_15ssp" />
 
             <LinearLayout
                 android:id="@+id/lytQ2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingHorizontal="@dimen/_5sdp"
+                android:layout_marginTop="@dimen/_20sdp"
                 android:background="@color/leafBrown"
-                android:layout_marginTop="@dimen/_20sdp">
+                android:orientation="horizontal"
+                android:paddingHorizontal="@dimen/_5sdp">
 
                 <TextView
                     android:id="@+id/txtQ2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="How to Create a Meeting Reservation"
+                    android:text=""
                     android:textSize="@dimen/_20ssp" />
 
                 <ImageView
@@ -83,24 +83,24 @@
                 android:id="@+id/txtA2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/_15ssp"
-                android:layout_marginTop="@dimen/_10sdp"/>
+                android:layout_marginTop="@dimen/_10sdp"
+                android:textSize="@dimen/_15ssp" />
 
             <LinearLayout
                 android:id="@+id/lytQ3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                android:layout_marginTop="@dimen/_20sdp"
                 android:background="@color/leafBrown"
-                android:paddingHorizontal="@dimen/_5sdp"
-                android:layout_marginTop="@dimen/_20sdp">
+                android:orientation="horizontal"
+                android:paddingHorizontal="@dimen/_5sdp">
 
                 <TextView
                     android:id="@+id/txtQ3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="How to Create a Meeting Reservation"
+                    android:text=""
                     android:textSize="@dimen/_20ssp" />
 
                 <ImageView
@@ -115,8 +115,40 @@
                 android:id="@+id/txtA3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/_15ssp"
-                android:layout_marginTop="@dimen/_10sdp"/>
+                android:layout_marginTop="@dimen/_10sdp"
+                android:textSize="@dimen/_15ssp" />
+
+            <LinearLayout
+                android:id="@+id/lytQ4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_20sdp"
+                android:background="@color/leafBrown"
+                android:orientation="horizontal"
+                android:paddingHorizontal="@dimen/_5sdp">
+
+                <TextView
+                    android:id="@+id/txtQ4"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text=""
+                    android:textSize="@dimen/_20ssp" />
+
+                <ImageView
+                    android:layout_width="@dimen/_20sdp"
+                    android:layout_height="@dimen/_20sdp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/down" />
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/txtA4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:textSize="@dimen/_15ssp" />
 
         </LinearLayout>
 
