--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -17,33 +17,33 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:layout_width="@dimen/_20sdp"
-        android:layout_height="@dimen/_20sdp"
+<!--    <ImageView-->
+<!--        android:layout_width="@dimen/_20sdp"-->
+<!--        android:layout_height="@dimen/_20sdp"-->
+<!--        android:layout_marginTop="@dimen/_22sdp"-->
+<!--        android:layout_marginEnd="@dimen/_5sdp"-->
+<!--        android:src="@drawable/baseline_edit_24"-->
+<!--        app:layout_constraintEnd_toStartOf="@id/switchEditMode"-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Edit Profile"
+        android:paddingEnd="@dimen/_5sdp"
+        android:textSize="@dimen/_15ssp"
         android:layout_marginTop="@dimen/_22sdp"
-        android:layout_marginEnd="@dimen/_5sdp"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toStartOf="@id/switchEditMode"
-        android:src="@drawable/baseline_edit_off_24"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/switchEditMode"
         android:layout_width="@dimen/_35sdp"
         android:layout_height="@dimen/_35sdp"
         android:layout_marginTop="@dimen/_15sdp"
-        android:layout_marginEnd="@dimen/_40sdp"
+        android:layout_marginEnd="@dimen/_15sdp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
-
-    <ImageView
-        android:layout_width="@dimen/_20sdp"
-        android:layout_height="@dimen/_20sdp"
-        android:layout_marginTop="@dimen/_22sdp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="@dimen/_5sdp"
-        android:layout_marginEnd="@dimen/_15sdp"
-        app:layout_constraintStart_toEndOf="@id/switchEditMode"
-        android:src="@drawable/baseline_edit_24"/>
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imgProfileImage"
