--- a/app/src/main/res/layout/activity_security.xml
+++ b/app/src/main/res/layout/activity_security.xml
@@ -105,6 +105,7 @@
         android:id="@+id/lytDeleteUser"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_50sdp"
+        android:background="@color/red"
         app:layout_constraintTop_toBottomOf="@+id/lytChangePassword">
 
         <TextView
@@ -113,6 +114,7 @@
             android:layout_marginStart="@dimen/_20sdp"
             android:text="Delete User Account"
             android:textSize="@dimen/_15sdp"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
