--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lightLeafBrown"
+    android:background="@color/lightBlue"
     android:orientation="vertical"
     tools:context=".homeScreen.HomeScreenActivity">
 
@@ -130,7 +130,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/_3sdp"
                 android:layout_weight="1"
-                android:background="@color/leafBrown"
+                android:background="@color/blue"
 
                 android:clickable="true"
                 android:foreground="?attr/selectableItemBackgroundBorderless"
@@ -162,7 +162,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_3sdp"
                 android:layout_weight="1"
-                android:background="@color/leafBrown"
+                android:background="@color/blue"
 
                 android:clickable="true"
                 android:foreground="?attr/selectableItemBackgroundBorderless"
@@ -315,7 +315,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/lightLeafBrown"
+                android:background="@color/lightBlue"
                 android:orientation="vertical">
 
                 <de.hdodenhof.circleimageview.CircleImageView
