--- a/app/src/main/res/drawable/top_right_layout_shape.xml
+++ b/app/src/main/res/drawable/top_right_layout_shape.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <corners android:topRightRadius="@dimen/_10sdp"/>
-    <solid android:color="@color/leafBrown"/>
+    <solid android:color="@color/blue"/>
 </shape>
