--- a/app/src/main/res/layout/activity_faqactivity.xml
+++ b/app/src/main/res/layout/activity_faqactivity.xml
@@ -4,12 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lightLeafBrown"
+    android:background="@color/lightBlue"
     tools:context=".homeScreen.setting.FaqActivity">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginBottom="@dimen/_50sdp"
         android:paddingVertical="@dimen/_10sdp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,136 +24,222 @@
             android:layout_marginVertical="@dimen/_5sdp"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:id="@+id/lytQ1"
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/leafBrown"
-                android:orientation="horizontal"
-                android:paddingHorizontal="@dimen/_5sdp">
+                android:backgroundTint="@color/lightBlue"
+                android:elevation="@dimen/_10sdp"
+                app:cardCornerRadius="@dimen/_10sdp">
 
-                <TextView
-                    android:id="@+id/txtQ1"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text=""
-                    android:textSize="@dimen/_20ssp" />
+                    android:orientation="vertical">
 
-                <ImageView
-                    android:id="@+id/imgUpDown"
-                    android:layout_width="@dimen/_20sdp"
-                    android:layout_height="@dimen/_20sdp"
-                    android:layout_gravity="center"
-                    android:src="@drawable/down" />
+                    <LinearLayout
+                        android:id="@+id/lytQ1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/blue"
+                        android:orientation="horizontal"
+                        android:paddingHorizontal="@dimen/_5sdp">
 
-            </LinearLayout>
+                        <TextView
+                            android:id="@+id/txtQ1"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text=""
+                            android:textSize="@dimen/_20ssp" />
 
-            <TextView
-                android:id="@+id/txtA1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:textSize="@dimen/_15ssp" />
+                        <ImageView
+                            android:id="@+id/imgUpDown1"
+                            android:layout_width="@dimen/_20sdp"
+                            android:layout_height="@dimen/_20sdp"
+                            android:layout_gravity="center"
+                            android:src="@drawable/down" />
 
-            <LinearLayout
-                android:id="@+id/lytQ2"
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/txtA1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingStart="@dimen/_5sdp"
+                        android:paddingBottom="@dimen/_5sdp"
+                        android:textSize="@dimen/_15ssp"
+                        android:visibility="gone" />
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_20sdp"
-                android:background="@color/leafBrown"
-                android:orientation="horizontal"
-                android:paddingHorizontal="@dimen/_5sdp">
+                android:backgroundTint="@color/lightBlue"
+                android:elevation="@dimen/_10sdp"
+                app:cardCornerRadius="@dimen/_10sdp">
 
-                <TextView
-                    android:id="@+id/txtQ2"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text=""
-                    android:textSize="@dimen/_20ssp" />
+                    android:orientation="vertical">
 
-                <ImageView
-                    android:layout_width="@dimen/_20sdp"
-                    android:layout_height="@dimen/_20sdp"
-                    android:layout_gravity="center"
-                    android:src="@drawable/down" />
+                    <LinearLayout
+                        android:id="@+id/lytQ2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/blue"
+                        android:orientation="horizontal"
+                        android:paddingHorizontal="@dimen/_5sdp">
 
-            </LinearLayout>
+                        <TextView
+                            android:id="@+id/txtQ2"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text=""
+                            android:textSize="@dimen/_20ssp" />
 
-            <TextView
-                android:id="@+id/txtA2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:textSize="@dimen/_15ssp" />
+                        <ImageView
+                            android:id="@+id/imgUpDown2"
+                            android:layout_width="@dimen/_20sdp"
+                            android:layout_height="@dimen/_20sdp"
+                            android:layout_gravity="center"
+                            android:src="@drawable/down" />
 
-            <LinearLayout
-                android:id="@+id/lytQ3"
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/txtA2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingStart="@dimen/_5sdp"
+                        android:paddingBottom="@dimen/_5sdp"
+                        android:textSize="@dimen/_15ssp"
+                        android:visibility="gone" />
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_20sdp"
-                android:background="@color/leafBrown"
-                android:orientation="horizontal"
-                android:paddingHorizontal="@dimen/_5sdp">
+                android:backgroundTint="@color/lightBlue"
+                android:elevation="@dimen/_10sdp"
+                app:cardCornerRadius="@dimen/_10sdp">
 
-                <TextView
-                    android:id="@+id/txtQ3"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text=""
-                    android:textSize="@dimen/_20ssp" />
+                    android:orientation="vertical">
 
-                <ImageView
-                    android:layout_width="@dimen/_20sdp"
-                    android:layout_height="@dimen/_20sdp"
-                    android:layout_gravity="center"
-                    android:src="@drawable/down" />
+                    <LinearLayout
+                        android:id="@+id/lytQ3"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/blue"
+                        android:orientation="horizontal"
+                        android:paddingHorizontal="@dimen/_5sdp">
 
-            </LinearLayout>
+                        <TextView
+                            android:id="@+id/txtQ3"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text=""
+                            android:textSize="@dimen/_20ssp" />
 
-            <TextView
-                android:id="@+id/txtA3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:textSize="@dimen/_15ssp" />
+                        <ImageView
+                            android:id="@+id/imgUpDown3"
+                            android:layout_width="@dimen/_20sdp"
+                            android:layout_height="@dimen/_20sdp"
+                            android:layout_gravity="center"
+                            android:src="@drawable/down" />
 
-            <LinearLayout
-                android:id="@+id/lytQ4"
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/txtA3"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingStart="@dimen/_5sdp"
+                        android:paddingBottom="@dimen/_5sdp"
+                        android:textSize="@dimen/_15ssp"
+                        android:visibility="gone" />
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_20sdp"
-                android:background="@color/leafBrown"
-                android:orientation="horizontal"
-                android:paddingHorizontal="@dimen/_5sdp">
+                android:backgroundTint="@color/lightBlue"
+                android:elevation="@dimen/_10sdp"
+                app:cardCornerRadius="@dimen/_10sdp">
 
-                <TextView
-                    android:id="@+id/txtQ4"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text=""
-                    android:textSize="@dimen/_20ssp" />
+                    android:orientation="vertical">
 
-                <ImageView
-                    android:layout_width="@dimen/_20sdp"
-                    android:layout_height="@dimen/_20sdp"
-                    android:layout_gravity="center"
-                    android:src="@drawable/down" />
+                    <LinearLayout
+                        android:id="@+id/lytQ4"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/blue"
+                        android:orientation="horizontal"
+                        android:paddingHorizontal="@dimen/_5sdp">
 
-            </LinearLayout>
+                        <TextView
+                            android:id="@+id/txtQ4"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text=""
+                            android:textSize="@dimen/_20ssp" />
 
-            <TextView
-                android:id="@+id/txtA4"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:textSize="@dimen/_15ssp" />
+                        <ImageView
+                            android:id="@+id/imgUpDown4"
+                            android:layout_width="@dimen/_20sdp"
+                            android:layout_height="@dimen/_20sdp"
+                            android:layout_gravity="center"
+                            android:src="@drawable/down" />
+
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/txtA4"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingStart="@dimen/_5sdp"
+                        android:paddingBottom="@dimen/_5sdp"
+                        android:textSize="@dimen/_15ssp"
+                        android:visibility="gone" />
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
 
         </LinearLayout>
 
     </ScrollView>
+
+    <Button
+        android:id="@+id/btnContactUs"
+        style="@style/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/_10sdp"
+        android:text="Contact Us"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
