--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lightLeafBrown"
+    android:background="@color/lightBlue"
     tools:context=".homeScreen.setting.ForgotPasswordActivity">
 
     <ImageView
@@ -43,7 +43,7 @@
             android:layout_marginStart="0dp"
             android:layout_marginTop="0dp"
             android:layout_marginEnd="0dp"
-            android:background="@color/lightLeafBrown"
+            android:background="@color/lightBlue"
             android:orientation="horizontal"
             android:padding="0dp"
             android:paddingHorizontal="0dp"
