--- a/app/src/main/res/layout/activity_security.xml
+++ b/app/src/main/res/layout/activity_security.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/lightLeafBrown"
+    android:background="@color/lightBlue"
     tools:context=".homeScreen.setting.SecurityActivity">
 
     <ImageView
@@ -113,6 +113,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_20sdp"
             android:text="Delete User Account"
+            android:textStyle="bold"
             android:textSize="@dimen/_15sdp"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
