--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:background="@color/lightLeafBrown"
+        android:background="@color/lightBlue"
         android:gravity="center"
         android:orientation="vertical"
         android:paddingHorizontal="@dimen/_30sdp"
