--- a/app/src/main/res/layout/loadingdialog.xml
+++ b/app/src/main/res/layout/loadingdialog.xml
@@ -15,7 +15,7 @@
             android:layout_width="@dimen/_70sdp"
             android:layout_height="@dimen/_70sdp"
             android:layout_gravity="center"
-            android:indeterminateTint="@color/darkLeafBrown"/>
+            android:indeterminateTint="@color/darkBlue"/>
 
         <ImageView
             android:layout_width="@dimen/_20sdp"
@@ -29,7 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:textColor="@color/darkLeafBrown"
+        android:textColor="@color/darkBlue"
         android:textStyle="bold"
         android:text="LOADING..."/>
 
