--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,6 +2,6 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.MeetEase" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
-        <item name="colorPrimary">@color/leafBrown</item>
+        <item name="colorPrimary">@color/blue</item>
     </style>
 </resources>
