--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="brown">#C37E41</color>
     <color name="mintGreen">#47B69F</color>
     <color name="orange">#FF5722</color>
-    <color name="darkLeafBrown">#916630</color>
-    <color name="leafBrown">#C99145</color>
-    <color name="lightLeafBrown">#D1B289</color>
+    <color name="darkBlue">#2B3FAF</color>
+    <color name="blue">#2196F3</color>
+    <color name="lightBlue">#39B7EF</color>
 </resources>
