--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,14 +2,14 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.MeetEase" parent="Theme.Material3.DayNight.NoActionBar">
 <!--         Customize your light theme here. -->
-         <item name="colorPrimary">@color/leafBrown</item>
+         <item name="colorPrimary">@color/blue</item>
     </style>
 
     <style name="Theme.MeetEase" parent="Base.Theme.MeetEase" />
 
     <style name="button">
         <item name="android:background">@drawable/button_shape</item>
-        <item name="backgroundTint">@color/leafBrown</item>
+        <item name="backgroundTint">@color/blue</item>
         <item name="android:paddingStart">@dimen/_10sdp</item>
         <item name="android:paddingEnd">@dimen/_10sdp</item>
         <item name="android:paddingBottom">@dimen/_10sdp</item>
@@ -34,6 +34,6 @@
 
     <style name="RatingBar" parent="Theme.AppCompat">
         <item name="colorControlNormal">@color/black</item>
-        <item name="colorControlActivated">@color/darkLeafBrown</item>
+        <item name="colorControlActivated">@color/darkBlue</item>
     </style>
 </resources>
