--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -21,6 +21,8 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@id/ivBack"
         android:text="Change Password"
+        android:textColor="@color/white"
+        android:textStyle="bold"
         android:textSize="@dimen/_30sdp" />
 
     <EditText
