--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/_200sdp"
         android:scaleType="fitXY"
-        android:src="@drawable/back_ground_image" />
+        android:src="@drawable/blue_back" />
 
     <TextView
         android:id="@+id/txtHeading"
@@ -108,7 +108,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/don_t_have_an_account_signup"
-            android:textColor="@color/brown"
+            android:textColor="@color/lightBlue"
             android:textStyle="bold" />
 
     </LinearLayout>
