--- a/app/src/main/res/layout/activity_faqactivity.xml
+++ b/app/src/main/res/layout/activity_faqactivity.xml
@@ -50,6 +50,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:text=""
+                            android:textColor="@color/white"
                             android:textSize="@dimen/_20ssp" />
 
                         <ImageView
@@ -68,6 +69,7 @@
                         android:paddingStart="@dimen/_5sdp"
                         android:paddingBottom="@dimen/_5sdp"
                         android:textSize="@dimen/_15ssp"
+                        android:textColor="@color/white"
                         android:visibility="gone" />
 
                 </LinearLayout>
@@ -101,6 +103,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:text=""
+                            android:textColor="@color/white"
                             android:textSize="@dimen/_20ssp" />
 
                         <ImageView
@@ -119,6 +122,7 @@
                         android:paddingStart="@dimen/_5sdp"
                         android:paddingBottom="@dimen/_5sdp"
                         android:textSize="@dimen/_15ssp"
+                        android:textColor="@color/white"
                         android:visibility="gone" />
 
                 </LinearLayout>
@@ -151,6 +155,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:textColor="@color/white"
                             android:text=""
                             android:textSize="@dimen/_20ssp" />
 
@@ -170,6 +175,7 @@
                         android:paddingStart="@dimen/_5sdp"
                         android:paddingBottom="@dimen/_5sdp"
                         android:textSize="@dimen/_15ssp"
+                        android:textColor="@color/white"
                         android:visibility="gone" />
 
                 </LinearLayout>
@@ -203,6 +209,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:text=""
+                            android:textColor="@color/white"
                             android:textSize="@dimen/_20ssp" />
 
                         <ImageView
@@ -221,6 +228,7 @@
                         android:paddingStart="@dimen/_5sdp"
                         android:paddingBottom="@dimen/_5sdp"
                         android:textSize="@dimen/_15ssp"
+                        android:textColor="@color/white"
                         android:visibility="gone" />
 
                 </LinearLayout>
