--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -99,19 +99,75 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lyt2" />
 
-
-    <EditText
-        android:id="@+id/etvOTP"
-        style="@style/edittext"
+    <LinearLayout
+        android:id="@+id/lytOtp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_20sdp"
-        android:gravity="center"
-        android:hint="OTP"
-        android:imeOptions="actionDone"
-        android:inputType="number"
-        android:maxLength="6"
-        app:layout_constraintTop_toBottomOf="@+id/btnSend" />
+        android:orientation="horizontal"
+        android:paddingHorizontal="@dimen/_10sdp"
+        app:layout_constraintTop_toBottomOf="@+id/btnSend">
+
+        <EditText
+            android:id="@+id/etvOtp1"
+            style="@style/edittext"
+            android:layout_width="@dimen/_30sdp"
+            android:layout_height="@dimen/_30sdp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:imeOptions="actionNext"
+            android:inputType="number" />
+
+        <EditText
+            android:id="@+id/etvOtp2"
+            style="@style/edittext"
+            android:layout_width="@dimen/_30sdp"
+            android:layout_height="@dimen/_30sdp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:imeOptions="actionNext"
+            android:inputType="number" />
+
+        <EditText
+            android:id="@+id/etvOtp3"
+            style="@style/edittext"
+            android:layout_width="@dimen/_30sdp"
+            android:layout_height="@dimen/_30sdp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:imeOptions="actionNext"
+            android:inputType="number" />
+
+        <EditText
+            android:id="@+id/etvOtp4"
+            style="@style/edittext"
+            android:layout_width="@dimen/_30sdp"
+            android:layout_height="@dimen/_30sdp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:imeOptions="actionNext"
+            android:inputType="number" />
+
+        <EditText
+            android:id="@+id/etvOtp5"
+            style="@style/edittext"
+            android:layout_width="@dimen/_30sdp"
+            android:layout_height="@dimen/_30sdp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:imeOptions="actionNext"
+            android:inputType="number" />
+
+        <EditText
+            android:id="@+id/etvOtp6"
+            style="@style/edittext"
+            android:layout_width="@dimen/_30sdp"
+            android:layout_height="@dimen/_30sdp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:imeOptions="actionDone"
+            android:inputType="number" />
+
+    </LinearLayout>
 
     <Button
         android:id="@+id/btnCheckOtp"
@@ -122,7 +178,7 @@
         android:padding="0dp"
         android:text="Check OTP"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/etvOTP" />
+        app:layout_constraintTop_toBottomOf="@id/lytOtp" />
 
     <EditText
         android:id="@+id/etvNewPassword"
