--- a/app/src/main/res/layout/activity_rate_us.xml
+++ b/app/src/main/res/layout/activity_rate_us.xml
@@ -48,6 +48,7 @@
         android:numStars="5"
         android:rating="5"
         android:stepSize="1"
+        style="@style/RatingBar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txtCompanyName" />
