--- a/app/src/main/res/layout/activity_security.xml
+++ b/app/src/main/res/layout/activity_security.xml
@@ -106,6 +106,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/_50sdp"
         android:background="@color/red"
+        android:layout_marginHorizontal="@dimen/_10sdp"
         app:layout_constraintTop_toBottomOf="@+id/lytChangePassword">
 
         <TextView
