--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@drawable/back_ground_image" />
+        android:src="@drawable/blue_back" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -35,23 +35,6 @@
             android:textColor="@color/blue"
             android:textSize="@dimen/_40ssp" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:layout_marginEnd="@dimen/_20sdp"
-            android:text="A Place to Book Your"
-            android:textColor="@color/white"
-            android:textSize="@dimen/_20ssp" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/_20sdp"
-            android:text="Meeting Venues"
-            android:textColor="@color/white"
-            android:textSize="@dimen/_20ssp" />
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -62,7 +45,7 @@
                 style="@style/button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_250sdp"
+                android:layout_marginTop="@dimen/_300sdp"
                 android:text="START WITH EMAIL OR PHONE"
                 android:textColor="@color/white"
                 android:textSize="@dimen/_13ssp"
