--- a/app/src/main/res/layout/activity_faqactivity.xml
+++ b/app/src/main/res/layout/activity_faqactivity.xml
@@ -69,7 +69,7 @@
                         android:paddingStart="@dimen/_5sdp"
                         android:paddingBottom="@dimen/_5sdp"
                         android:textSize="@dimen/_15ssp"
-                        android:textColor="@color/white"
+                        android:textColor="@color/black"
                         android:visibility="gone" />
 
                 </LinearLayout>
@@ -122,7 +122,7 @@
                         android:paddingStart="@dimen/_5sdp"
                         android:paddingBottom="@dimen/_5sdp"
                         android:textSize="@dimen/_15ssp"
-                        android:textColor="@color/white"
+                        android:textColor="@color/black"
                         android:visibility="gone" />
 
                 </LinearLayout>
@@ -175,7 +175,7 @@
                         android:paddingStart="@dimen/_5sdp"
                         android:paddingBottom="@dimen/_5sdp"
                         android:textSize="@dimen/_15ssp"
-                        android:textColor="@color/white"
+                        android:textColor="@color/black"
                         android:visibility="gone" />
 
                 </LinearLayout>
@@ -228,7 +228,7 @@
                         android:paddingStart="@dimen/_5sdp"
                         android:paddingBottom="@dimen/_5sdp"
                         android:textSize="@dimen/_15ssp"
-                        android:textColor="@color/white"
+                        android:textColor="@color/black"
                         android:visibility="gone" />
 
                 </LinearLayout>
