--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="mintGreen">#47B69F</color>
     <color name="orange">#FF5722</color>
     <color name="darkBlue">#214091</color>
+    <color name="tryIt">#04194E</color>
     <color name="blue">#2E4583</color>
     <color name="lightBlue">#90CAF9</color>
 </resources>
