--- a/app/src/main/res/layout/fragment_end_time_picker.xml
+++ b/app/src/main/res/layout/fragment_end_time_picker.xml
@@ -11,7 +11,8 @@
         android:layout_width="@dimen/_250sdp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:elevation="@dimen/_1sdp">
+        android:elevation="@dimen/_1sdp"
+        app:cardCornerRadius="@dimen/_10sdp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="wrap_content"
