--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -21,7 +21,7 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@id/ivBack"
         android:text="Change Password"
-        android:textColor="@color/white"
+        android:textColor="@color/blue"
         android:textStyle="bold"
         android:textSize="@dimen/_30sdp" />
 
@@ -66,7 +66,7 @@
         android:layout_below="@id/etvConfirmPassword"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/_20sdp"
-        android:text="Save" />
+        android:text="   Save   " />
 
     <TextView
         android:id="@+id/txtForgotPassword"
@@ -75,8 +75,9 @@
         android:layout_below="@id/btnSave"
         android:layout_centerHorizontal="true"
         android:padding="@dimen/_5sdp"
-        android:text="FORGOT PASSWORD"
-        android:textColor="@color/white"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:text="FORGOT PASSWORD ?"
+        android:textColor="@color/darkBlue"
         android:textStyle="bold" />
 
 </RelativeLayout>
