--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -104,66 +104,97 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingHorizontal="@dimen/_10sdp"
+        android:gravity="center"
+        android:layout_marginTop="@dimen/_20sdp"
         app:layout_constraintTop_toBottomOf="@+id/btnSend">
 
         <EditText
             android:id="@+id/etvOtp1"
             style="@style/edittext"
-            android:layout_width="@dimen/_30sdp"
-            android:layout_height="@dimen/_30sdp"
-            android:layout_weight="1"
+            android:layout_width="@dimen/_40sdp"
+            android:layout_height="@dimen/_40sdp"
+            android:maxLength="1"
             android:gravity="center"
+            android:paddingStart="0dp"
+            android:paddingEnd="0dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginEnd="5dp"
             android:imeOptions="actionNext"
             android:inputType="number" />
 
         <EditText
             android:id="@+id/etvOtp2"
             style="@style/edittext"
-            android:layout_width="@dimen/_30sdp"
-            android:layout_height="@dimen/_30sdp"
-            android:layout_weight="1"
+            android:layout_width="@dimen/_40sdp"
+            android:layout_height="@dimen/_40sdp"
             android:gravity="center"
+            android:paddingStart="0dp"
+            android:paddingEnd="0dp"
+            android:maxLength="1"
+            android:layout_marginTop="0dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginEnd="5dp"
             android:imeOptions="actionNext"
             android:inputType="number" />
 
         <EditText
             android:id="@+id/etvOtp3"
             style="@style/edittext"
-            android:layout_width="@dimen/_30sdp"
-            android:layout_height="@dimen/_30sdp"
-            android:layout_weight="1"
+            android:layout_marginTop="0dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginEnd="5dp"
+            android:maxLength="1"
+            android:layout_width="@dimen/_40sdp"
+            android:layout_height="@dimen/_40sdp"
             android:gravity="center"
+            android:paddingStart="0dp"
+            android:paddingEnd="0dp"
             android:imeOptions="actionNext"
             android:inputType="number" />
 
         <EditText
             android:id="@+id/etvOtp4"
             style="@style/edittext"
-            android:layout_width="@dimen/_30sdp"
-            android:layout_height="@dimen/_30sdp"
-            android:layout_weight="1"
+            android:layout_width="@dimen/_40sdp"
+            android:layout_height="@dimen/_40sdp"
             android:gravity="center"
+            android:paddingStart="0dp"
+            android:paddingEnd="0dp"
+            android:maxLength="1"
+            android:layout_marginTop="0dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginEnd="5dp"
             android:imeOptions="actionNext"
             android:inputType="number" />
 
         <EditText
             android:id="@+id/etvOtp5"
             style="@style/edittext"
-            android:layout_width="@dimen/_30sdp"
-            android:layout_height="@dimen/_30sdp"
-            android:layout_weight="1"
+            android:layout_width="@dimen/_40sdp"
+            android:layout_height="@dimen/_40sdp"
             android:gravity="center"
+            android:paddingStart="0dp"
+            android:paddingEnd="0dp"
+            android:maxLength="1"
+            android:layout_marginTop="0dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginEnd="5dp"
             android:imeOptions="actionNext"
             android:inputType="number" />
 
         <EditText
             android:id="@+id/etvOtp6"
             style="@style/edittext"
-            android:layout_width="@dimen/_30sdp"
-            android:layout_height="@dimen/_30sdp"
-            android:layout_weight="1"
+            android:layout_width="@dimen/_40sdp"
+            android:layout_height="@dimen/_40sdp"
             android:gravity="center"
+            android:paddingStart="0dp"
+            android:paddingEnd="0dp"
+            android:maxLength="1"
+            android:layout_marginTop="0dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginEnd="0dp"
             android:imeOptions="actionDone"
             android:inputType="number" />
 
