--- a/app/src/main/res/layout/previous_meeting_item.xml
+++ b/app/src/main/res/layout/previous_meeting_item.xml
@@ -30,13 +30,13 @@
                     android:layout_height="@dimen/_100sdp"
                     android:layout_marginStart="@dimen/_5sdp"
                     android:layout_marginEnd="@dimen/_5sdp"
-                    android:layout_weight="0.7"
+                    android:layout_weight="0.8"
                     app:cardCornerRadius="@dimen/_10sdp">
 
                     <ImageView
                         android:id="@+id/imgRoom"
                         android:layout_width="match_parent"
-                        android:layout_height="@dimen/_100sdp"
+                        android:layout_height="match_parent"
                         android:scaleType="fitXY"
                         android:src="@drawable/back_ground_image" />
 
@@ -57,7 +57,7 @@
                         android:layout_weight="1"
                         android:gravity=""
                         android:text="Taj Hotel"
-                        android:textSize="@dimen/_20sdp"
+                        android:textSize="@dimen/_22sdp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -69,50 +69,42 @@
                         android:text="Ahmedabad"
                         android:gravity=""
                         android:textColor="@color/black"
-                        android:textSize="@dimen/_18sdp" />
+                        android:textSize="@dimen/_16sdp" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:gravity="center_vertical"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/txtDate"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="12/12/23"
+                            android:layout_marginHorizontal="@dimen/_10sdp"
+                            android:textColor="@color/black"
+                            android:textSize="@dimen/_13sdp" />
+
+                        <TextView
+                            android:id="@+id/txtTime"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginHorizontal="@dimen/_10sdp"
+                            android:text="14:00 - 15:89"
+                            android:textColor="@color/black"
+                            android:textSize="@dimen/_13sdp" />
+
+                    </LinearLayout>
+
                 </LinearLayout>
 
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="@dimen/_10sdp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Booking Info :"
-                    android:textStyle="bold"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/_15sdp" />
-
-                <TextView
-                    android:id="@+id/txtDate"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="12/12/23"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/_15sdp" />
-
-                <TextView
-                    android:id="@+id/txtTime"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="14:00"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/_15sdp" />
-
-            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_10sdp">
+                android:layout_height="wrap_content">
 
                 <RatingBar
                     android:id="@+id/ratingBar"
