--- a/app/src/main/res/layout/upcoming_meeting_item.xml
+++ b/app/src/main/res/layout/upcoming_meeting_item.xml
@@ -91,23 +91,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_10sdp"
+                android:gravity="center"
                 android:orientation="horizontal">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Booking Info :"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/_15sdp"
-                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/txtDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:text="12/12/23"
+                    android:layout_marginEnd="@dimen/_5sdp"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_15sdp" />
 
@@ -115,39 +108,13 @@
                     android:id="@+id/txtTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="14:00"
+                    android:text="14:00:00 - 12:00:00"
+                    android:layout_marginStart="@dimen/_5sdp"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_15sdp" />
 
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_10sdp">
-
-                <RatingBar
-                    android:id="@+id/ratingBar"
-                    style="?android:attr/ratingBarStyleIndicator"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:numStars="5"
-                    android:rating="4"
-                    android:stepSize="1" />
-
-                <Button
-                    android:id="@+id/btnBookAgain"
-                    style="@style/button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/_10sdp"
-                    android:layout_weight="1"
-                    android:text="Book Again"
-                    android:textSize="@dimen/_10sdp" />
-
-            </LinearLayout>
 
         </LinearLayout>
 
